<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Tanggal Pengerjaan : 6/8/2024
  ~     Nim : 10121050
  ~     Nama : Rio Christian Cesar Sihombing
  ~     email :riosihombing047@gmail.com
  ~     Copyright © 2024 Rio Sihombing. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/pale_pink">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:fontFamily="@font/larken_medium"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:textColor="#333333"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul"
        android:background="@drawable/roundedbg"
        android:layout_marginBottom="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- CardView untuk Menu -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/sendok"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:fontFamily="@font/larken_bold"/>
                            <TextView
                                android:id="@+id/menuTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/isi_menu"
                                android:textSize="14sp"
                                android:fontFamily="@font/font"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- CardView untuk Jadwal Kegiatan -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/jadwal_kegiatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="15dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/jam"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/larken_bold"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hari"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/font"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="35dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mulai"
                        android:textSize="12sp"
                        android:fontFamily="@font/font"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="60dp"/>
                </androidx.cardview.widget.CardView>

                <!-- CardView untuk Jadwal Kegiatan -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/tempat"
                    android:layout_width="match_parent"
                    android:layout_height="493dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="15dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/ic_kegiatan_tempat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="22dp"
                        android:fontFamily="@font/larken_bold"
                        android:text="@string/tempat"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="230dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/g9" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="330dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/larken_light"
                        android:text="@string/nama_tempat"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="370dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/larken_light"
                        android:text="@string/lokasi_tempat"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                    <!-- Garis Pembatas -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="420dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/pink"/> <!-- Sesuaikan warna sesuai kebutuhan -->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="430dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/larken_light"
                        android:text="@string/deskripsi"
                        android:textSize="16sp"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
